--- a/LA311_16_21_analysis_monthly.ipynb
+++ b/LA311_16_21_analysis_monthly.ipynb
@@ -41,12 +41,12 @@
     "<h2>Reading and Displaying the data</h2>\n",
     "\n",
     "Data taken from:\n",
-    "* https://data.lacity.org/City-Infrastructure-Service-Requests/MyLA311-Service-Request-Data-2016/ndkd-k878\n",
-    "* https://data.lacity.org/City-Infrastructure-Service-Requests/MyLA311-Service-Request-Data-2017/d4vt-q4t5\n",
-    "https://data.lacity.org/City-Infrastructure-Service-Requests/MyLA311-Service-Request-Data-2018/h65r-yf5i\n",
-    "* https://data.lacity.org/City-Infrastructure-Service-Requests/MyLA311-Service-Request-Data-2019/pvft-t768\n",
-    "* https://data.lacity.org/City-Infrastructure-Service-Requests/MyLA311-Service-Request-Data-2020/rq3b-xjk8\n",
-    "* https://data.lacity.org/City-Infrastructure-Service-Requests/MyLA311-Service-Request-Data-2021/97z7-y5bt/data"
+    "* [311-Data 2016](https://data.lacity.org/City-Infrastructure-Service-Requests/MyLA311-Service-Request-Data-2016/ndkd-k878)\n",
+    "* [311-Data 2017](https://data.lacity.org/City-Infrastructure-Service-Requests/MyLA311-Service-Request-Data-2017/d4vt-q4t5) \n",
+    "* [311-Data 2018](https://data.lacity.org/City-Infrastructure-Service-Requests/MyLA311-Service-Request-Data-2018/h65r-yf5i)\n",
+    "* [311-Data 2019](https://data.lacity.org/City-Infrastructure-Service-Requests/MyLA311-Service-Request-Data-2019/pvft-t768)\n",
+    "* [311-Data 2020](https://data.lacity.org/City-Infrastructure-Service-Requests/MyLA311-Service-Request-Data-2020/rq3b-xjk8)\n",
+    "* [311-Data 2021](https://data.lacity.org/City-Infrastructure-Service-Requests/MyLA311-Service-Request-Data-2021/97z7-y5bt/data)"
    ]
   },
   {
